--- a/main/templates/common/navbar.html
+++ b/main/templates/common/navbar.html
@@ -1,6 +1,6 @@
 {% block navbar%}
 {% load static %}
-<link rel="stylesheet" href="{% static 'navbar.css' %}?v=1.0">
+<link rel="stylesheet" href="{% static 'css/navbar.css' %}?v=1.0">
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top mantiplex-navbar">
     <div class="container">
