--- a/parents/templates/parent_base.html
+++ b/parents/templates/parent_base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html lang="uk">
   <title>{% block title %}Mantiplex{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'global_style.css' %}?v=1.0">
+    <link rel="stylesheet" href="{% static 'css/global_style.css' %}?v=1.0">
     
     <main>{% block content %}{% endblock %} </main>
 
