--- a/main/templates/common/base.html
+++ b/main/templates/common/base.html
@@ -8,7 +8,7 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'global_style.css' %}?v=1.1">
+    <link rel="stylesheet" href="{% static 'css/global_style.css' %}?v=1.1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
      {% block styles %}{% endblock %}
   </head>
@@ -25,6 +25,9 @@
           {% block sidebar %}{%include "common/sidebar.html" %}{% endblock %}
           <!-- Content Area -->
           <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            <!-- alerts -->
+            {% block alerts %}{%include "common/alerts.html" %}{% endblock %}
+            
             {% block content %}{% endblock %}
           </div>
         </div>
@@ -40,5 +43,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.8.4/axios.min.js" integrity="sha512-2A1+/TAny5loNGk3RBbk11FwoKXYOMfAK6R7r4CpQH7Luz4pezqEGcfphoNzB7SM4dixUoJsKkBsB6kg+dNE2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
 </html>
