--- a/main/templates/common/navbar.html
+++ b/main/templates/common/navbar.html
@@ -1,6 +1,6 @@
 {% block navbar%}
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/navbar.css' %}?v=1.0">
+<link rel="stylesheet" href="{% static 'css/navbar.css' %}?v=1.1">
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top mantiplex-navbar">
     <div class="container">
@@ -10,20 +10,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-        {% if request.user.is_staff %}
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="" href="/admin">Адмін</a>
-            </li>
-        {% endif %}
-        {% if request.user.is_authenticated %}
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="" href="/calendar/your_profile">Мій Профіль</a>
-            </li>
-        {% else %}
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="" href="/login">Логін</a>
-            </li>
-        {% endif %}
+            {% if request.user.is_authenticated %}
+                <a class="nav-item ps-5 text-decoration-none" href="/calendar/your_profile" style="color: rgb(255, 255, 255);">Мій Профіль</a>
+                <a class="nav-item ps-5 text-decoration-none" href="/calendar/users" style="color: rgb(255, 255, 255);">Інші користувачі</a>
+                <a class="nav-item ps-5 text-decoration-none" href="#" style="color: rgba(255, 255, 255, 0.712);">Вийти</a>
+                {% if request.resolver_match.view_name != 'calendar' %}
+                    <a class="nav-item ps-5 text-decoration-none" href="/calendar/" style="color: rgb(255, 255, 255);">Календар</a>
+                {% endif %}
+                {% if request.user.is_staff %}
+                    <a class="nav-item ps-5" href="/admin" style="color: rgb(255, 255, 255);">Адмін</a>
+                {% endif %}
+            {% endif %}
+            
         </ul>
     </div>
     </div>
